--- a/appserver/templates/credentials.html
+++ b/appserver/templates/credentials.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>HTTP Alert Action</title>
+        <title>WebhookMaster</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
@@ -18,7 +18,7 @@
         <%
             # App version for cache busting - replaced during build
             app_version = "__VERSION_PLACEHOLDER__"
-            page_path = "/static/app/ta_http_action/pages/" + page + ".js?v=" + app_version
+            page_path = "/static/app/webhookmaster/pages/" + page + ".js?v=" + app_version
         %>
 
         <script src="${make_url(page_path)}"></script>
