--- a/default/data/ui/views/credentials.xml
+++ b/default/data/ui/views/credentials.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
-<view template="ta_http_action:/templates/credentials.html" type="html">
+<view template="webhookmaster:/templates/credentials.html" type="html">
 	<label>Credentials</label>
 </view>
